@@ -28,7 +28,7 @@
 #endif
 
 #if defined (__linux__) || defined (__MINGW32__) || defined (__CYGWIN__) || \
-    defined (__BORLANDC__) || defined (__DMC__)
+    defined (__BORLANDC__) || defined (__DMC__) || defined (__HP_aCC)
 
 #  if defined (__BORLANDC__)
 typedef unsigned int uint32_t;
@@ -476,7 +476,7 @@ static double _Stl_atod(char *buffer, ptrdiff_t ndigit, int dexp) {
 #endif
 
 #if defined (__linux__) || defined (__MINGW32__) || defined (__CYGWIN__) || \
-    defined (__BORLANDC__) || defined (__DMC__)
+    defined (__BORLANDC__) || defined (__DMC__) || defined (__HP_aCC)
 
 template <class D, class IEEE, int M, int BIAS>
 D _Stl_atodT(char *buffer, ptrdiff_t ndigit, int dexp)
@@ -742,7 +742,7 @@ static double _Stl_string_to_double(const char *s) {
 #endif
 
 #if defined (__linux__) || defined (__MINGW32__) || defined (__CYGWIN__) || \
-    defined (__BORLANDC__) || defined (__DMC__)
+    defined (__BORLANDC__) || defined (__DMC__) || defined (__HP_aCC)
 
 template <class D, class IEEE, int M, int BIAS>
 D _Stl_string_to_doubleT(const char *s)
@@ -865,7 +865,7 @@ __string_to_float(const __iostring& v, double& val)
 void _STLP_CALL
 __string_to_float(const __iostring& v, long double& val) {
 #if !defined (__linux__) && !defined (__MINGW32__) && !defined (__CYGWIN__) && \
-    !defined (__BORLANDC__) && !defined (__DMC__)
+    !defined (__BORLANDC__) && !defined (__DMC__) && !defined (__HP_aCC)
   //The following function is valid only if long double is an alias for double.
   _STLP_STATIC_ASSERT( sizeof(long double) <= sizeof(double) )
   val = _Stl_string_to_double(v.c_str());
